Fix spacing on desktop menu/header - switch to flex-direction column

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   align-items: center;
+  flex-direction: column;
   background-image: linear-gradient(#4a69bd, #0984e3);
   color: white;
   margin-bottom: 1rem;
@@ -8,6 +9,8 @@
   position: sticky;
   top: 0;
   z-index: 99;
+  padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 1260px) {
