--- a/src/components/title.module.css
+++ b/src/components/title.module.css
@@ -1,5 +1,7 @@
 .site-title {
   font-size: 2.25rem;
+  font-weight: 600;
+  margin: 24px 0 0 0;
 }
 
 .span {
@@ -12,7 +14,7 @@
   color: white;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
   .wrapper {
     display: none;
   }
